--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,14 @@ img{
 	margin-top: 2px;
 }
 
+#plaque{
+	width: 98vw;
+	height: 100vh;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
 html{
 	background: #222;
 }
