--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@ html{
 #switch{
 	position: fixed;
 	bottom: 0;
-	width: 40%;
-	left: 30%;
+	width: 20%;
+	left: 40%;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 }
@@ -61,6 +61,7 @@ html{
 }
 
 #num{
+	z-index: 999;
 	position: fixed;
 	left: 90px;
 	color: #111;
